# chartroom

./: .gitignore  README.md  SPEC.md  pyproject.toml
chartroom/: charts.py  cli.py  io.py
demo/: README.md  alt-text.md  styles.md  styles_helper.py
demos/: alt-text.md
tests/: test_alt.py  test_chartroom.py  test_io.py
